# rustberries

L0/: Cargo.toml  README.md
L0/data/: broken.json  generated.json  orders.bak  schema.json
L0/migrations/: V1__initial.sql
L0/src/: main.rs
L1/: Cargo.toml  README
L2/: Cargo.toml
L2/test/: cut_output.txt  grep_input.txt  grep_output.txt  lf_input.txt  lf_output.txt  shell_output.txt  sort_input.txt  sort_output_human.txt  sort_output_month.txt  sort_output_numeric.txt  sort_output_unique.txt
L3/chat/: .env  Cargo.toml  README.md
L3/chat/src/: controller.rs  domain.rs  dto.rs  main.rs  repository.rs
L3/chat/src/controller/: dto.rs  mod.rs  route.rs
L3/chat/src/domain/: chat.rs  message.rs  user.rs
L3/chat/src/repository/: dashmap.rs  mod.rs
L3/cli/: README.md
L3/cli/src/: command.rs  commands.rs  main.rs  user.rs
L3/snake/: .env  Cargo.toml  README.md
L3/snake/src/client/: gui.rs  logic.rs  main.rs  socket.rs
L3/snake/src/domain/: apple.rs  collider.rs  mod.rs  snake.rs  world.rs
L3/snake/src/server/: logic.rs  main.rs  socket.rs
L3/social/: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
L3/social/migrations/: init.sql
L3/social/src/: errors.rs  main.rs
L3/social/src/controller/: auth.rs  dto.rs  mod.rs  route.rs  token.rs
L3/social/src/domain/: post.rs  user.rs
L3/social/src/repository/: mod.rs  postgres.rs
L3/tasker/: .env  Cargo.toml
L3/tasker/src/: lib.rs
L3/tasker/workdir/: input  output
