[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dashmap = "6.1.0"
dotenv = "0.15.0"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
