[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders", "file", "image", "svg"] }
rand = "0.8.5"
