[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
dotenv = "0.15.0"
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders", "file", "image", "svg"] }
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dashmap = "6.1.0"
