[package]
name = "social"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "0.14.0"
serde_json = "1.0.132"
sha2 = "0.10.8"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
