[package]
name = "tasker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
notify = { version = "7.0.0", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
