[package]
name = "tasker"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
dotenv = "0.15.0"
log = "0.4.22"
notify = { version = "7.0.0", features = ["serde"] }
rand = "0.8.5"
random = "0.14.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
